<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalendar"
    android:background="@color/UserChosing"
    android:orientation="vertical"
    android:transitionName="transition_calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="previousClick"
            android:background="@drawable/ic_arrowleft"

            />



            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="Dec 2021"
                android:textAlignment="center"
                android:textColor="@color/BeeText"
                />



        <ImageButton
            android:layout_marginRight="20dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="nextClick"
            android:background="@drawable/ic_arrow"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/BeeText"
            android:textAlignment="center"
            android:textSize="16sp"
            />






    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>





</LinearLayout>