<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/ic_deletedialog"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:paddingTop="25dp"
            android:text="@string/rusure"
            android:fontFamily="@font/font"
            android:textColor="@color/BeeText"
            android:textSize="27dp"
            android:textAlignment="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textFontWeight="900"
            >
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rusure1"
            android:fontFamily="@font/font"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/BeeText"
            android:textSize="15dp"
            android:alpha="0.75"
            android:textAlignment="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textFontWeight="750"
            >
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/font"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/BeeText"
            android:textSize="15dp"
            android:textAlignment="center"
            android:textFontWeight="900"
            android:backgroundTint="#f1ce6b"
            android:id="@+id/cancel"
            />
        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:fontFamily="@font/font"
            android:layout_marginRight="50dp"
            android:textColor="@color/UserChosing"
            android:textSize="15dp"
            android:alpha="0.9"
            android:textAlignment="center"
            android:textFontWeight="900"
            android:backgroundTint="@color/BeeText"
            />
    </LinearLayout>
</LinearLayout>