<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="344dp"
    android:layout_height="470dp"
    android:orientation="vertical"
    tools:context=".WorkerActivity"
    android:layout_gravity="center"
    android:background="@drawable/ic_settingsbg"
    >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="55dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_settingsheaderleft">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:fontFamily="@font/font"
                        android:textColor="@color/BeeText"
                        android:textSize="38dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textFontWeight="900"
                        >
                    </TextView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_settingsheaderright">
                    </ImageView>

            </LinearLayout>
    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="11dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_line"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="22dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:background="@drawable/ic_switch_user">
                </ImageButton>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:textSize="14dp"
                    android:textColor="@color/BeeText"
                    android:textFontWeight="900"
                    android:text="@string/user"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp">
                <ImageButton
                    android:id="@+id/language"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:background="@drawable/ic_languages"
                    tools:ignore="SpeakableTextPresentCheck"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:textSize="14dp"
                    android:textColor="@color/BeeText"
                    android:text="@string/lan"
                    android:textFontWeight="900"
                    android:layout_gravity="center"
                    />
            </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/ic_themes">
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:textSize="14dp"
                android:textColor="@color/BeeText"
                android:text="@string/themes"
                android:textFontWeight="900"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/ic_sound"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:textSize="14dp"
                android:textColor="@color/BeeText"
                android:text="@string/sound"
                android:textFontWeight="900"
                android:layout_gravity="center"/>


        </LinearLayout>



    </LinearLayout>


</LinearLayout>